Fix paragraph spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -106,6 +106,10 @@ p {
   margin-block-end: 1rem;
 }
 
+p:last-child {
+  margin-block-end: 0;
+}
+
 img {
   inline-size: 100%;
   margin-block-end: var(--title-spacing);
